--- a/notebooks/02_deeplearning/01_mlp/mlp.ipynb
+++ b/notebooks/02_deeplearning/01_mlp/mlp.ipynb
@@ -16,7 +16,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/gdl2-m3/bin/python\n",
+      "['/opt/anaconda3/envs/gdl2-m3/lib/python310.zip', '/opt/anaconda3/envs/gdl2-m3/lib/python3.10', '/opt/anaconda3/envs/gdl2-m3/lib/python3.10/lib-dynload', '', '/opt/anaconda3/envs/gdl2-m3/lib/python3.10/site-packages', '/opt/anaconda3/envs/gdl2-m3/lib/python3.10/site-packages/setuptools/_vendor']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "#print(os.getcwd())\n",
+    "\n",
+    "print(sys.executable)\n",
+    "print(sys.path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.18"
   },
   "vscode": {
    "interpreter": {
